--- a/code/style.css
+++ b/code/style.css
@@ -1,22 +1,29 @@
 body {
   background: #000000;
   color: white;
-  font-family: Arial;
+  font-family: 'Playfair Display', serif;
   margin: 0;
+  padding: 0;
+  width: 100%;
 }
 
 h2 {
-  text-align: left;
-  font-weight: lighter;
+font-size: 20px;
+font-weight: lighter;
+color: #fff;
 }
 
 h3 {
-  font-size: 25px;
+  color: #f7941e;
+  font-size: 32px;
+  font-weight: lighter;
+  margin-top: 5px;
 }
 
 h4 {
   margin: 10px 22px;
   font-size: 25px;
+  margin-top: 1px;
 }
 
 h5 {
@@ -24,168 +31,210 @@ h5 {
   font-size: 20px;
 }
 
+p {
+  font-size: 30px;
+}
+
 .container {
   width: 100%;
-  max-width: 100%;
   margin: 0 auto;
   padding-right: 50px;
 }
 
 /*** HEADER ***/
 
-header {
-  margin: 0;
-  background: white;
-  height: 80px;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-}
+    header {
+      margin: 0;
+      background: #eee;
+      height: 80px;
+      display: flex;
+      align-items: center;
+      padding: 0 16px;
+    }
 
-header img {
-  width: 120px;
-}
+    header img {
+      width: 120px;
+    }
 
-.hamburger {
-  display: flex;
-  width: 30px;
-  height: 30px;
-  flex-direction: column;
-  justify-content: space-between;
-  border-radius: 5px;
-  margin-right: 24px;
-  position: absolute;
-  right: 0;
-}
+    .hamburger {
+      display: flex;
+      width: 30px;
+      height: 30px;
+      flex-direction: column;
+      justify-content: space-between;
+      border-radius: 5px;
+      margin-right: 24px;
+      position: absolute;
+      right: 0;
+    }
 
-.hamburger div {
-  width: 30px;
-  height: 5px;
-  background: black;
-}
+    .hamburger div {
+      width: 30px;
+      height: 5px;
+      background: black;
+    }
 
-nav {
-  display: none;
-}
+    nav {
+      display: none;
+    }
 
-nav a {
-  color: black;
-  text-decoration: none;
-  margin-left: 16px;
+    nav a {
+      color: black;
+      text-decoration: none;
+      margin-left: 16px;
+      font-size: 30px;
+      font-weight: bold;
 
-}
+    }
+
 /*** MAIN NEWS CONTAINER ***/
 
-.main-news-container .container {
-  width: 100%;
-padding-right: 20px;
-  display: flex;
-  flex-direction: column;
-}
+  .main-news-container {
+    background: #c1c1c1;
+    color: #000000;
+    text-align: center;
+    padding: 0px;
+  }
 
-.main-news-container img {
-  width: 100%;
-}
+  .main-news-cards {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-.main-news-container div {
-  text-align: center;
-  margin: 20px;
-}
+  .blinking {
+    animation: mymove 1s infinite alternate;
+  }
 
-/*** BUTTON ***/
+  @-webkit-keyframes mymove {
+    from {opacity:0;}
+    to {opacity: 1;}
+  }
+  .main-news-cards img {
+    width: 90%;
+    margin-top: 16px;
+    
+  }
 
-button {
-  background-color: #16681f; 
-  border: none;
-  border-radius: 5%;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 23px;
-  margin-bottom: 10px;
-}
+  .main-news-cards a {
+    background: #000;
+    border: 7px groove #000000;
+    border-radius: 10px;
+    text-decoration: none;
+    box-shadow: 5px 5px 0 0 #505050;
+    margin-bottom: 32px;
+  }
 
 /*** GRID NEWS CONTAINER ***/
 
-.grid-news-container {
-  background: white;
-  color: #000000;
-  text-align: center;
-  padding: 24px;
-}
+      .grid-news-container {
+        background: white;
+        color: #000000;
+        text-align: center;
+        padding: 24px;
+      }
 
-.news-cards {
-  display: flex;
-  flex-wrap: wrap;
-}
+      .news-cards {
+        display: flex;
+        flex-wrap: wrap;
+      }
 
-.news-cards img {
-  width: 90%;
-  margin-top: 16px;
-}
+      .news-cards img {
+        width: 90%;
+        margin-top: 16px;
+        border-radius: 20px;
+      }
 
-.news-cards a {
-  background: snow;
-  border: 2px solid #000000;
-  border-radius: 16px;
-  width: 100%;
-  text-decoration: none;
-  color: black;
-  box-shadow: 12px 12px 0 0 #16681f;
-  margin-bottom: 32px;
+      .news-cards a {
+        background: snow;
+        background-color: #eeeeee;
+        border: 2px dashed #000000;
+        border-radius: 16px;
+        width: 100%;
+        text-decoration: none;
+        color: black;
+        margin-bottom: 32px;
+      }
 
-}
+/*** BUTTON ***/
+
+    button {
+      background-color: #f7941e; 
+      border: none;
+      border-radius: 5%;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 23px;
+      margin-bottom: 10px;
+    }
+
 /*** FOOTER ***/
 
-footer {
-  background: #000000;
-  color: #000000;
-}
+  footer {
+    height: 100px;
+    background: #eee;
+    padding: 10px;
+  }
+
+
 /*** MEDIA QUERIES ***/
 
-@media (min-width: 650px) {
-  header {
-    justify-content: space-between;
-  }
-  nav {
-  display: inline-block;
-  }
+    @media (min-width: 650px) {
+      header {
+        justify-content: space-between;
+      }
 
-  .hamburger {
-    display: none;
-  }
+      .main-news img {
+        max-width: 500px;
+      }
+      .news-cards a {
+        width: 25%;
+        flex-grow: 1;
+        margin: 36px;
+      }
+    }
 
-  .main-news-container img {
-    max-width: 100%;
-    padding: 16px;
-  }
+    @media (min-width: 900px) {
 
-  .main-news-container div {
-    text-align: left;
-  }
-}
+      nav {
+        display: inline-block;
+        }
 
-@media (min-width: 900px) {
-  .main-news-container .container {
-  margin: 20px;
-  flex-direction: row-reverse;
-  align-items: center;
-  justify-content: space-between;
-}
+      .hamburger {
+        display: none;
+      }
 
-.main-news-container img {
-  max-width: 600px;
-}
-.main-news-container div {
-  text-align: left;
-}
+      .main-news {
+        justify-content: space-around;
+        display: flex;
+        flex-direction: row-reverse;
+        padding: 10px;
+      }
 
-.news-cards a {
-  width: 25%;
-  flex-grow: 1;
-  margin: 16px;
-}
-}
+      .main-news-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-self: stretch;
+        margin-right: 10px;
+      }
+
+      .main-news img {
+        max-width: 600px;
+        justify-content: center;
+      }
+
+      .main-news-cards a {
+        width: 25%;
+        flex-grow: 1;
+        margin: 16px;
+      }
+      .news-cards a {
+      width: 25%;
+      flex-grow: 1;
+      margin: 16px;
+    }
+    }
 
