--- a/code/style.css
+++ b/code/style.css
@@ -4,6 +4,41 @@
   margin-right: auto;
 }
 
+.big-news {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  height: 50vh;
+  background-color: #333;
+  color: lightblue;
+  max-width: 100%;
+  align-content: center;
+  
+
+}
+.big-news img {
+
+max-width: 100%;
+max-height: 70%;
+object-fit: cover;
+
+}
+
+.big-news div {
+  padding: 10px;
+  max-width: 90%;
+  max-height: 20%;
+ 
+
+
+}
+.item h1{
+  text-align: center;
+  font-size: 1.5em;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  }
+
 .row {
   display: flex;
   flex-direction: row;
@@ -102,6 +137,42 @@ padding-top: 10px;
   #box{
     max-width: 90vw;
   }
+  .big-news {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    height: 40vh;
+    width: 100%;
+    
+  }
+  .big-news img {
+    height: 100%;
+  max-width: 50%;
+  min-height: 85%;
+  object-fit: cover;
+}
+
+.big-news div{
+  height: 100%;
+  
+
+}
+.item div{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  max-width: 50vw;
+}
+
+.item h1{
+width: 90%;
+
+}
+.item p{
+  width: 90%;
+  overflow: auto; 
+}
+
   .column {
     width: 50%; 
   }
