--- a/code/style.css
+++ b/code/style.css
@@ -35,6 +35,19 @@ h1 {
   color: #ffec34;
 }
 
+.hamburger {
+display: flex;
+width: 30px;
+height: 30px;
+flex-direction: column;
+justify-content: space-between;
+}
+
+.hamburger div {
+  width: 30px;
+  height: 5px;
+}
+
 header nav {
   display: flex;
   justify-content: space-evenly;
@@ -52,6 +65,17 @@ color: #ffec34;
 
 .big-news img {
   height: 250px;
+}
+
+.big-news div {
+  display: flex;
+  flex-direction: column;
+}
+
+h2 {
+  font-size: 20px;
+  color: black;
+  padding: 25px;
 }
 
 .content {
@@ -86,9 +110,10 @@ color: #ffec34;
 
 @media screen and (max-width: 525px){
   header nav {
-      display: flex;
+      display: none;
       flex-direction: column;
   }    
+
 }
 
 
