--- a/code/style.css
+++ b/code/style.css
@@ -41,11 +41,15 @@ width: 30px;
 height: 30px;
 flex-direction: column;
 justify-content: space-between;
+position: absolute;
+top: 20px;
+left: 20px;
 }
 
 .hamburger div {
   width: 30px;
   height: 5px;
+  background-color: #ffec34;
 }
 
 header nav {
@@ -64,7 +68,10 @@ color: #ffec34;
 }
 
 .big-news img {
-  height: 250px;
+  height: auto;
+  width: 100%;
+  max-width: 500px;
+  object-fit: contain;
 }
 
 .big-news div {
@@ -102,13 +109,21 @@ h2 {
 }
 
 
-@media screen and (min-width: 640px){
+@media (min-width: 640px) {
   .flex-container {
       display: flex;
   }    
+
+  .big-news div {
+    flex-direction: row;
+  }
+
+  h2 {
+    font-size: 11px;
+  }
 }
 
-@media screen and (max-width: 525px){
+@media (max-width: 525px) {
   header nav {
       display: none;
       flex-direction: column;
@@ -116,6 +131,17 @@ h2 {
 
 }
 
+@media (min-width: 900px) {
+  h2 {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 525px) {
+  .hamburger {
+    display: none;
+  }
+}
 
 
 
