--- a/style.css
+++ b/style.css
@@ -159,13 +159,13 @@ nav a {
 
 /*** OTHER NEWS CONTAINER ***/
 
-.other-news-container {
+.recepies-container {
   background: #f7f89b;
   text-align: center;
   padding: 24px;
 }
 
-.other-news-cards {
+.recepies-cards {
   display: flex;
   flex-flow: wrap-reverse;
 }
@@ -174,7 +174,7 @@ nav a {
   width: 100%;
 }
 
-.other-news-cards a {
+.recepies-cards a {
   background: snow;
   color: #f7f89b;
   background-color: #739f25;
@@ -241,7 +241,7 @@ footer {
   margin: 16px;
 }
 
-.other-news-cards a {
+.recepies-cards a {
   width: 15%;
   flex-grow: 1;
   margin: 16px;
