--- a/code/style.css
+++ b/code/style.css
@@ -182,6 +182,10 @@ footer {
     position: absolute;
     left: 50%;
     margin-left: -15px;
+    animation-name: rotating;
+    animation-duration: 3s;
+    animation-iteration-count: 2;
+    animation-direction: alternate;
   }
 
   .big-news {
@@ -211,5 +215,17 @@ footer {
     background: #fff;
     font-family: 'Radley', serif;
     box-shadow: 5px 5px 0 0 #e2e1e1;
+  }
+
+  /*** LOGO ANIMATION ***/
+
+  @keyframes rotating {
+    from {
+      transform: rotate(0);
+    }
+
+    to {
+      transform: rotate(360deg);
+    }
   }
 }
